# physic-labs

./: .gitignore  .gitmodules  CMakeLists.txt  tags
.cache/clangd/index/: calc.cpp.58B0641844D0B151.idx  calc.h.4FB53D8BF9A99F06.idx  constants.h.883F5DA031219B33.idx  dataStruct.h.646A59CFAC22D6CA.idx  main.cpp.BF89FFE2DD869AE4.idx
balls/: \  calculate.cpp  calculatedAverageAngle.txt  calculatedAverageDispersion.txt  calculatedAverageVelocity.txt  calculatedDispersion.txt  calculatedVelocity.txt  execution
include/: Calc.h  LabFactory.h  LabStruct.h  calc.h  constants.h  dataStruct.h
include/factories/: LabFactory.h
include/fstream/: FStream.h  IFStream.h
include/fstream/csv/: Fcsv.h
include/graphics/: Graphic.h
include/graphics/decart/: Decart.h
include/graphics/render/: IRender.h
include/io/: FStream.h  IMstream.h
include/io/csv/: Fcsv.h
include/labs/: ExperimentStruct.h  IExperiment.h  LabStruct.h
include/labs/lab2/: CalculatedDataOberbeck.h  ErrorOberbeck.h  OberbeckLab.h
include/labs/lab2(1)/: Lab2.h  Lab2Calc.h  Lab2Error.h  Lab2Exp.h
include/labs/lab213/: atwoodLab.h
include/labs/lab3/: CalculatedDataPendulum.h  PendulumLab.h  (+2 more)
include/tokens/: ExperimentToken.h  LabToken.h
include/work1/: calculatedDataAtwood.h  errorAtwood.h
include/work2/: CalculatedDataOberbeck.h  ErrorOberbeck.h
include/work3/: CalculatedDataPendulum.h  ErrorPendulum.h
src/: Calc.cpp  LabFactory.cpp  LabStruct.cpp  calc.cpp  main.cpp
src/Work1/: atwoodLab.cpp  calculatedDataAtwood.cpp  errorAtwood.cpp
src/Work2/: CalculatedDataOberbeck.cpp  ErrorOberbeck.cpp
src/Work3/: CalculatedDataPendulum.cpp  ErrorPendulum.cpp  PendulumLab.cpp
src/labs/: LabStruct.cpp
src/rawData/: data.csv
src/tokens/: ExperimentToken.cpp  ExpetimentToken.cpp  LabToken.cpp
(+13 files in other folders)
